--- a/index.html
+++ b/index.html
@@ -131,5 +131,76 @@
                 </article>
             </div>
         </section>
+        <section class="section services" id="services">
+            <div class="section-center services-center">
+                <div class="section-title">
+                    <h2>our <span>services</span></h2>
+                </div>
+                <div class="section-center services-center">
+                    <article class="service">
+                        <span class="service-icon">
+                            <i class="fa-solid fa-book fa-fw"></i>
+                        </span>
+                        <div class="service-info">
+                            <h4 class="service-title">
+                                3DTD’S BEST PRACTICE GUIDE
+                            </h4>
+                            <p class="service-text">
+                                3DTD's guide enhances awareness, informs
+                                clients, consultants, contractors on
+                                cost-effective, quality-driven process for
+                                network planning.
+                            </p>
+                        </div>
+                    </article>
+                    <article class="service">
+                        <span class="service-icon">
+                            <i
+                                class="fa-solid fa-magnifying-glass-chart fa-fw"></i>
+                        </span>
+                        <div class="service-info">
+                            <h4 class="service-title">
+                                ADVANCED FEASIBILITY STUDIES
+                            </h4>
+                            <p class="service-text">
+                                With over 20 years’ experience in designing,
+                                building, installing, operating and maintaining
+                                district energy schemes we are unique
+                                consultants in our field.
+                            </p>
+                        </div>
+                    </article>
+                    <article class="service">
+                        <span class="service-icon">
+                            <i class="fa-solid fa-pen-ruler fa-fw"></i>
+                        </span>
+                        <div class="service-info">
+                            <h4 class="service-title">DETAILED DESIGN</h4>
+                            <p class="service-text">
+                                Gaining the necessary; Mechanical, Civil,
+                                Coordination and Construction/Delivery
+                                experience, takes many years/projects to
+                                develop, which is why 3DTD is a Specialist
+                                Consultancy.
+                            </p>
+                        </div>
+                    </article>
+                    <article class="service">
+                        <span class="service-icon">
+                            <i class="fa-solid fa-compass-drafting fa-fw"></i>
+                        </span>
+                        <div class="service-info">
+                            <h4 class="service-title">CAD SERVICES</h4>
+                            <p class="service-text">
+                                3D Technical Design Ltd have built an
+                                exceptional reputation in supplying specialist
+                                CAD design and technical services to the Heat
+                                Network sector.
+                            </p>
+                        </div>
+                    </article>
+                </div>
+            </div>
+        </section>
     </body>
 </html>
