--- a/index.html
+++ b/index.html
@@ -202,5 +202,93 @@
                 </div>
             </div>
         </section>
+        <section class="section case-studies" id="studies">
+            <div class="section-title">
+                <h2>case <span>studies</span></h2>
+                <p>
+                    From Exeter to RAF Fylingdale and beyond, our expertise has
+                    helped implement the right high quality design and
+                    consultancy solutions our clients expect.
+                </p>
+            </div>
+            <div class="studies-center section-center">
+                <article class="case-card">
+                    <div class="case-img-container">
+                        <img
+                            src="./images/case-studies/raf-flyingdale-low.jpeg"
+                            alt="raf-flyingdale image"
+                            class="case-img" />
+                        <p class="client">RAF Fylingdale</p>
+                    </div>
+                    <div class="case-info">
+                        <h4>
+                            Above-ground pipe route: expansion, stress
+                            assessment
+                        </h4>
+                        <p>
+                            3DTD assessed expansion, stress for CPV's RAF
+                            Fylingdales base's new above-ground pipe route.
+                            Analysis followed BS EN13480 standards.
+                        </p>
+                    </div>
+                </article>
+                <article class="case-card">
+                    <div class="case-img-container">
+                        <img
+                            src="./images/case-studies/York-University-low.jpeg"
+                            alt="york University image"
+                            class="case-img" />
+                        <p class="client">York University</p>
+                    </div>
+                    <div class="case-info">
+                        <h4>Designing a 2km long heat network scheme</h4>
+                        <p>
+                            2km pipe route from Innovation Way to University of
+                            York East Campus. Specialist DH engineer led design
+                            for Vital Energi.
+                        </p>
+                    </div>
+                </article>
+                <article class="case-card">
+                    <div class="case-img-container">
+                        <img
+                            src="./images/case-studies/TrentCity-low.jpeg"
+                            alt="raf-flyingdale image"
+                            class="case-img" />
+                        <p class="client">Trent City Council</p>
+                    </div>
+                    <div class="case-info">
+                        <h4>Developing a city-wide heat network</h4>
+                        <p>
+                            3DTD partnered with SoTCC and Nordic Heat,
+                            delivering practitioner-led buried network. Services
+                            include RIBA stages, procurement, and construction
+                            support.
+                        </p>
+                    </div>
+                </article>
+                <article class="case-card">
+                    <div class="case-img-container">
+                        <img
+                            src="./images/case-studies/Bristol-low.jpeg"
+                            alt="raf-flyingdale image"
+                            class="case-img" />
+                        <p class="client">Bristol City Council (BCC)</p>
+                    </div>
+                    <div class="case-info">
+                        <h4>Bristol's District Heating design</h4>
+                        <p>
+                            3DTD provided pre-construction design for Temple
+                            Meads District Heating network and extended it to
+                            Redcliffe, managing stakeholder and technical
+                            coordination.
+                        </p>
+                    </div>
+                </article>
+            </div>
+            <div class="case-btn">
+                <a href="#" class="btn">reade more cases</a>
+            </div>
+        </section>
     </body>
 </html>
