--- a/index.html
+++ b/index.html
@@ -290,5 +290,20 @@
                 <a href="#" class="btn">reade more cases</a>
             </div>
         </section>
+        <section class="section contact" id="contact">
+            <div class="section-center contact-center">
+                <article class="contact-title">
+                    <h3>sign up for newsletter and stay up to date</h3>
+                </article>
+                <form class="contact-form">
+                    <input
+                        type="email"
+                        name="email"
+                        class="form-control"
+                        placeholder="your email" />
+                    <button type="submit" class="btn-submit">sign up</button>
+                </form>
+            </div>
+        </section>
     </body>
 </html>
