--- a/index.html
+++ b/index.html
@@ -304,6 +304,135 @@
                     <button type="submit" class="btn-submit">sign up</button>
                 </form>
             </div>
+            <div class="team-detail"></div>
         </section>
+        <section id="team">
+            <div class="section-title team-title">
+                <h2>meet the <span>team</span></h2>
+            </div>
+            <div class="team-center">
+                <article class="team-img-container">
+                    <img
+                        src="./images/team/david-underwood.jpeg"
+                        alt="david picture"
+                        class="team-img" />
+                    <div class="team-detail">
+                        <h3 class="team-name">David Wood</h3>
+                        <h4>Head of Network Design/Director</h4>
+                    </div>
+                </article>
+                <article class="team-img-container">
+                    <img
+                        src="./images/team/team-pap-alt.jpeg"
+                        alt="david picture"
+                        class="team-img" />
+                    <div class="team-detail">
+                        <h3 class="team-name">Krisztian Pap</h3>
+                        <h4>Technical Director</h4>
+                    </div>
+                </article>
+                <article class="team-img-container">
+                    <img
+                        src="./images/team/team-jubb.jpeg"
+                        alt="david picture"
+                        class="team-img" />
+                    <div class="team-detail">
+                        <h3 class="team-name">Martin Jubb</h3>
+                        <h4>
+                            Senior District Heating Design Engineer/Team Leader
+                        </h4>
+                    </div>
+                </article>
+                <article class="team-img-container">
+                    <img
+                        src="./images/team/team-susanu.jpeg"
+                        alt="david picture"
+                        class="team-img" />
+                    <div class="team-detail">
+                        <h3 class="team-name">Nina Susanu</h3>
+                        <h4>senior CAD Designer</h4>
+                    </div>
+                </article>
+                <article class="team-img-container">
+                    <img
+                        src="./images/team/team-borshchyev.jpeg"
+                        alt="david picture"
+                        class="team-img" />
+                    <div class="team-detail">
+                        <h3 class="team-name">Gleb Borshchyev</h3>
+                        <h4>
+                            Senior District Heating Design Engineer/Team Leader
+                        </h4>
+                    </div>
+                </article>
+                <article class="team-img-container">
+                    <img
+                        src="./images/team/team-clayton.jpeg"
+                        alt="david picture"
+                        class="team-img" />
+                    <div class="team-detail">
+                        <h3 class="team-name">Leena Clayton</h3>
+                        <h4>Senior District Heating Network CAD Engineer</h4>
+                    </div>
+                </article>
+                <article class="team-img-container">
+                    <img
+                        src="./images/team/team-soares-alt.jpeg"
+                        alt="david picture"
+                        class="team-img" />
+                    <div class="team-detail">
+                        <h3 class="team-name">Odirlan Soares</h3>
+                        <h4>Senior DH Designer</h4>
+                    </div>
+                </article>
+                <article class="team-img-container">
+                    <img
+                        src="./images/team/team-scarth.jpeg"
+                        alt="david picture"
+                        class="team-img" />
+                    <div class="team-detail">
+                        <h3 class="team-name">Rosanne Scarth</h3>
+                        <h4 class="team-role">
+                            Management System Administrator
+                        </h4>
+                    </div>
+                </article>
+            </div>
+        </section>
+        <footer class="section footer" id="footer">
+            <ul class="footer-links">
+                <li>
+                    <a href="#home" class="footer-link">home</a>
+                    <a href="#about" class="footer-link">who we are</a>
+                    <a href="#services" class="footer-link">services</a>
+                    <a href="#studies" class="footer-link">case studies</a>
+                    <a href="#team" class="footer-link">meet the team</a>
+                </li>
+            </ul>
+            <ul class="footer-icons">
+                <li>
+                    <a
+                        class="footer-icon"
+                        href="https://www.linkedin.com/company/3d-technical-design-ltd/">
+                        <i class="fa-brands fa-linkedin"></i>
+                    </a>
+                    <a
+                        class="footer-icon"
+                        href="https://twitter.com/3d_technical">
+                        <i class="fa-brands fa-square-x-twitter"></i>
+                    </a>
+                    <a
+                        class="footer-icon"
+                        href="https://www.youtube.com/channel/UC47zaSz39vshl6M3mOeiHIA">
+                        <i class="fa-brands fa-square-youtube"></i>
+                    </a>
+                </li>
+            </ul>
+            <p class="copyright">
+                <span class="company">3D Technical Design Ltd</span> &copy;
+                Copyright 2024<br />
+                Company Reg No: 02683933.<br />VAT Reg No: 987787033
+            </p>
+        </footer>
     </body>
 </html>
