--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             </nav>
             <!-- hero     -->
             <div class="hero">
-                <div class="hero-banner">
+                <div class="hero-banner section">
                     <h1>Focused, expert-led consultancy</h1>
                     <p>
                         Specialist consultancy serving Public and Private
